--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "route-front-task",
   "version": "0.1.0",
-  "homepage": "https://MohamedAtef-SE.github.io/Route-Frontend-Task.git",
+  "homepage": "https://MohamedAtef-SE.github.io/Route-Frontend-Task",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
